# perception-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.json  server.py
perception_mcp/: __init__.py  main.py
perception_mcp/tools/: __init__.py  detection.py  grasping.py  localization.py  placing.py  segmentation.py
perception_mcp/utils/: __init__.py  depth.py  transforms.py  vision.py  websocket.py
